[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Bangladesh Objects/scientist/scientist_walk_1.png" type="Texture" id=1]
[ext_resource path="res://Levels/Level1/Scientist.gd" type="Script" id=2]
[ext_resource path="res://assets/objects/itime15.png" type="Texture" id=3]
[ext_resource path="res://assets/Bangladesh Objects/scientist/scientist_idle.png" type="Texture" id=4]
[ext_resource path="res://assets/Bangladesh Objects/scientist/scientist_walk_4.png" type="Texture" id=5]
[ext_resource path="res://assets/Bangladesh Objects/scientist/scientist_walk_3.png" type="Texture" id=6]
[ext_resource path="res://assets/Bangladesh Objects/scientist/scientist_walk_2.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.5, 164.5 )

[node name="Scientist" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "walk"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -386, -141 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="TweenLeave" type="Tween" parent="."]

[node name="flux" type="Sprite" parent="."]
visible = false
position = Vector2( -42, -37 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Scientist_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="TweenLeave" to="." method="_on_TweenLeave_tween_completed"]
